<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/img_content"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/login"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_dark"
            android:background="@drawable/input_transparent"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_dark"
            android:background="@drawable/input_transparent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_primary">

            <TextView
                android:id="@+id/do_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:text="@string/do_login"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/do_login_spinner"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@drawable/spinner"
                android:tint="@color/white"
                android:visibility="gone"
                android:contentDescription="@string/img_content"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_auth"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/danger"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/error_auth_title"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/error_auth_desc"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_network"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/danger"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/error_network_title"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/error_network_desc"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </LinearLayout>

</RelativeLayout>