<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <com.hogwarts_eng_school.hogwarts_teacher.view.LoadableImageView_
            android:id="@+id/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:riv_corner_radius="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:src="@color/gray_very_light"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/gray_dark"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_lessons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/my_lessons_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/my_lessons"
            android:contentDescription="@string/img_content"/>

        <TextView
            android:id="@+id/my_lessons_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_my_lessons"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/today_lessons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/today_lessons_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/today_lessons"
            android:contentDescription="@string/img_content"/>

        <TextView
            android:id="@+id/today_lessons_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_today_lessons"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/exit"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/sign_out"
                    android:contentDescription="@string/img_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_exit"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>